[package]
name = "fluid-server"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust backend for Fluid (Stellar fee-bump relay)"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
stellar-xdr = { version = "22", features = ["curr"] }
base64 = "0.22"
ed25519-dalek = "2.2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
stellar-strkey = "0.0.9"
tower-http = { version = "0.6", features = ["cors"] }
